updated swagger.yaml with crud tags
